2009-06-28  Markus Gutschke  <markus@shellinabox.com>

	* Added support for keyboards that have a dedicated "<" / ">" key.

2009-06-21  Markus Gutschke  <markus@shellinabox.com>

	* Added --localhost option.

	* Added support for building on ARM.

	* Respect "Connection: close" for proxies that rely on pre-HTTP/1.1
	behavior.

2009-05-24  Markus Gutschke  <markus@shellinabox.com>

	* Added SSL support for OpenBSD

2009-05-23  Markus Gutschke  <markus@shellinabox.com>

	* Released version 2.8

2009-05-22  Markus Gutschke  <markus@shellinabox.com>

	* Improved support for entering non-ASCII characters.

2009-05-20  Markus Gutschke  <markus@shellinabox.com>

	* Fixed various issues with building on OpenBSD

2009-04-28  Markus Gutschke  <markus@shellinabox.com>

	* Fixed variable expansion in service descriptions.
	
2009-04-27  Markus Gutschke  <markus@shellinabox.com>

	* Released version 2.7

	* Improved compatibility with some PAM configurations when running
	as a non-privileged user.

	* Fixed a bug that required shells to output data (e.g. a prompt)
	before they could read the first data.

	* Fixed a potential crash.

2009-04-12  Markus Gutschke  <markus@shellinabox.com>

	* Released version 2.6

	* The demo application is still incomplete, but starting to be
	somewhat functional. The BASIC interpreter supports variables, and
	can parse expressions. But it is still missing all flow-control
	commands, making it somewhat useless for writing real programs.

2009-03-30  Markus Gutschke  <markus@shellinabox.com>

	* Added initial revision of demo application.

	* Show fatal error message even when running in "quiet" mode.

	* Make it easier to override parameters needed by the system startup
	scripts.

2009-03-29  Markus Gutschke  <markus@shellinabox.com>

	* Added support for chained SSL certificates

2009-03-23  Markus Gutschke  <markus@shellinabox.com>

	* Added an INSTALL.Debian file with Debian-specific instructions on
	how to build and install a package file.
