@@ -1,3 +1,8 @@
+2009-07-03  Markus Gutschke  <markus@shellinabox.com>
+
+	* Added --linkify option. Default settings cause the terminal to
+	recognize fully qualified URLs and to make them clickable.
+
 2009-06-28  Markus Gutschke  <markus@shellinabox.com>
 
 	* Added support for keyboards that have a dedicated "<" / ">" key.
